# Jovi_GLSL

./: .gitignore  README.md  __init__.py  node_list.json  pyproject.toml  requirements.txt
core/: __init__.py  glsl.py  glsl_enum.py  glsl_manager.py  glsl_shader.py
glsl/.lib/: _.head  _.vert  camera.lib  color.lib  gradient.lib  pattern.lib  sdf.lib  shading.lib  vector.lib
glsl/.lib/math/: distance.glsl
glsl/.lib/noise/: noise_blue.lib  noise_grad.lib  noise_hash.lib  noise_param.lib  noise_perlin.lib  noise_simplex.lib  noise_space_cosmic.lib  noise_worley.lib
glsl/color/: color-hsv.frag  color-posterize.frag
glsl/create/: create-gradient_circular.frag  create-gradient_cone.frag  create-gradient_linear.frag  create-normal.frag  create-palette.frag
glsl/filter/: filter-bloom.frag  filter-range.frag
glsl/noise/: noise-perlin-batch.frag  noise-perlin.frag  noise-simplex-batch.frag  noise-simplex.frag  noise-worley-batch.frag  noise-worley.frag
glsl/shape/: shape-capsule.frag  shape-ellipse.frag  shape-polygon.frag
glsl/transform/: trans-direction_warp.frag  trans-transform.frag
web/: node_glsl_dynamic.js  util_jov.js  widget_vector.js
