[project]
name = "jovi_glsl"
description = "Integrates GLSL shader support."
version = "1.0.1"
license = { file = "LICENSE" }
dependencies = [
    "aenum>=3.1.15",
    "glfw",
    "loguru",
    "numpy>=1.26.4,<2.0.0; python_version < '3.12'",
    "numpy>=2.0.0; python_version > '3.11'",
    "opencv-contrib-python",
    "PyOpenGL",
    "PyOpenGL-accelerate>=3.1.7; python_version < '3.12'"
]

[project.urls]
Repository = "https://github.com/Amorano/JOVI_GLSL"

[tool.comfy]
PublisherId = "amorano"
DisplayName = "JOVI_GLSL"
Icon = ""
